# libhexapod

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.md  README.md  doxygen.conf  graph.py  hexapod.py  makefile  test.py
lib/: hexapod.cmake
lib/hexapod/: hexapod.h  hexapod.hpp  hexapod_defs.h  servo.h  vector.h
lib/source/: hexapod.c  mixer.c  servo.c  vector.c
test/source/: HexTest.cpp  coretest.cpp  main.cpp  servotest.cpp
util/include/: csvfile.h  util.h
util/source/: csvfile.c  main.cpp  util.c
